# speaker-change-detection

./: .gitignore  README.md  data.py  database.yml  inference.py  model.py  process_file.ipynb  process_file.py  pyproject.toml  sincnet.py  train.py
